# FabricLangRust

./: .gitignore
.run/: Minecraft Client.run.xml  build.run.xml
Generator/: build.gradle.kts  settings.gradle.kts
Generator/src/main/java/me/hydos/autogen/: BridgeGenerator.java  RustVisitor.java
QuiltMod/: LICENSE  build.gradle
QuiltMod/src/main/java/me/hydos/quiltlangrust/: QuiltLangRust.java  RustLangAdapter.java
QuiltMod/src/main/java/me/hydos/quiltlangrust/entrypoint/: RustClientModInitializer.java  RustModInitializer.java  RustNativeInitializer.java
QuiltMod/src/main/resources/: QuiltLangRust.mixins.json
RustBootstrap/: Cargo.toml
RustBootstrap/src/: MinecraftClient.rs  bridge.rs  lib.rs  macros.rs  util.rs
RustLangAdapter/: .gitignore  build.gradle  gradle.properties  options.txt  usercache.json
RustLangAdapter/src/main/java/me/hydos/quiltlangrust/: QuiltLangRust.java
RustLangAdapter/src/main/java/me/hydos/quiltlangrust/entrypoint/: RustClientModInitializer.java  RustDedicatedServerModInitializer.java
RustLangAdapter/src/main/resources/: fabric.mod.json
src/: lib.rs  raw_jni.rs
